--- a/pyproject.toml
+++ b/pyproject.toml
@@ -158,7 +158,7 @@ promptlayer = "^0.1.80"
 tair = "^1.3.3"
 wikipedia = "^1"
 pymongo = "^4.3.3"
-cassandra-driver = "^3.27.0"
+cassio = "^0.0.6"
 arxiv = "^1.4"
 mastodon-py = "^1.8.1"
 momento = "^1.5.0"
