--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,6 +111,7 @@ awadb = {version = "^0.3.3", optional = true}
 azure-search-documents = {version = "11.4.0a20230509004", source = "azure-sdk-dev", optional = true}
 openllm = {version = ">=0.1.6", optional = true}
 streamlit = {version = "^1.18.0", optional = true, python = ">=3.8.1,<3.9.7 || >3.9.7,<4.0"}
+cassio = {version = "^0.0.6", optional = true}
 
 [tool.poetry.group.docs.dependencies]
 autodoc_pydantic = "^1.8.0"
@@ -185,7 +186,7 @@ gptcache = "^0.1.9"
 promptlayer = "^0.1.80"
 tair = "^1.3.3"
 wikipedia = "^1"
-cassandra-driver = "^3.27.0"
+cassio = "^0.0.6"
 arxiv = "^1.4"
 mastodon-py = "^1.8.1"
 momento = "^1.5.0"
@@ -311,6 +312,7 @@ all = [
 extended_testing = [
  "beautifulsoup4",
  "bibtexparser",
+ "cassio",
  "chardet",
  "jq",
  "pdfminer.six",
